--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,8 @@ header {
 #banner {
     margin-top: -30px;
     background-color: #f8f8f8;
-    height: 80px;
+    min-height: 90px;
+    position: relative;
 }
 
 #banner .container {
@@ -117,6 +118,9 @@ body .form-container {
 .table {
     padding-left: 20px;
     padding-right: 20px;
+}
+.table-a:hover{
+    text-decoration: none;
 }
 
 .table td, .table th {
